grammar.js
    source_file: $ => repeat($._definition),

    _definition: $ => choice(
      $.header,
      $.code_file,
      // Bare expressions/literals for testing (will be refined later)
      $._expression,
    ),

    // ─── Top-level Structures ───────────────────────────────────

    header: $ => seq(
      "header",
      field("name", $.identifier),
      optional($.uses_clause),
      repeat($._header_declaration),
      "endHeader",
    ),

    _header_declaration: $ => choice(
      $.const_declaration,
      $.enum_declaration,
      $.type_declaration,
      $.error_declaration,
      $.var_declaration,
      $.functions_section,
      $.interface_declaration,
      $.class_declaration,
    ),

    var_declaration: $ => seq(
      "var",
      $.var_declarator,
      repeat(seq($._var_declarator_start, $.var_declarator)),
    ),

    var_declarator: $ => seq(
      repeat(seq(field("name", $.identifier), ",")),
      field("name", $.identifier),
      ":",
      field("type", $._type),
      optional(seq("=", field("value", $._expression))),
    ),

    // ─── Types ──────────────────────────────────────────────────

    _type: $ => choice(
      $.primitive_type,
      $.pointer_type,
      $.array_type,
      $.record_type,
      $.function_type,
      $.named_type,
    ),

    primitive_type: _ => choice(
      "int", "bool", "char", "double", "void", "typeOfNull", "anyType",
    ),

    pointer_type: $ => seq(
      "ptr", "to",
      field("type", $._type),
    ),

    array_type: $ => seq(
      "array",
      optional(seq("[", commaSep1($.array_dimension), "]")),
      "of",
      field("type", $._type),
    ),

    array_dimension: $ => choice(
      "*",
      $._expression,
    ),

    record_type: $ => seq(
      "record",
      repeat1($.record_field),
      "endRecord",
    ),

    record_field: $ => seq(
      repeat(seq(field("name", $.identifier), ",")),
      field("name", $.identifier),
      ":",
      field("type", $._type),
    ),

    function_type: $ => prec.right(seq(
      "function",
      "(",
      optional($.type_list),
      ")",
      optional(seq("returns", field("return_type", $._type))),
    )),

    type_list: $ => seq(
      $._type,
      repeat(seq(",", $._type)),
    ),

    named_type: $ => prec.right(seq(
      field("name", $.identifier),
      optional($.type_arguments),
    )),

    type_arguments: $ => seq(
      "[",
      $._type,
      repeat(seq(",", $._type)),
      "]",
    ),

    // ─── Parameters ─────────────────────────────────────────────

    _expression: $ => choice(
      $._literal,
      $.identifier,
      $.parenthesized_expression,
      $.binary_expression,
      $.unary_expression,
      $.call_expression,
      $.field_access,
      $.method_call,
      $.array_access,
      $.as_ptr_to_expression,
      $.as_integer_expression,
      $.array_size_expression,
      $.is_instance_of_expression,
      $.is_kind_of_expression,
      $.size_of_expression,
      $.constructor_expression,
      $.closure_expression,
    ),

    integer_literal: _ => /[0-9]+/,

    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,
  },
});

// ─── Helpers ──────────────────────────────────────────────────────

/**
 * Comma-separated list with at least one element.
 * @param {RuleOrLiteral} rule
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}
